# DJZ-KokoroTTS

./: KokoroTTS_LoadVoice_v1.py  KokoroTTS_SaveVoice_v1.py  KokoroTTS_v1.py  KokoroTTS_v2.py  KokoroTTS_v3.py  KokoroTTS_v4.py  KokoroTTS_v5.py  README.md  __init__.py  models.json  pyproject.toml
customvoices/: custom_voice.kkv
example-workflow/: EXAMPLE-KokoroTTS--Narrator.json  EXAMPLE-KokoroTTS-Ollama-v10.json  EXAMPLE-KokoroTTS-scene-builder-v10.json  EXAMPLE-KokoroTTS-v1.json  EXAMPLE-KokoroTTS-v2.json  EXAMPLE-KokoroTTS-v3.json  EXAMPLE-KokoroTTS-v5.json
